feat(p0): restack to Vue 2 embedded shell and Java 8 / Spring Boot 2.7
Replace the React/Vite + Java 21 / Spring Boot 4.1 empty stack with the PM
embedded-tool stack. HANDOFF product semantics stay; ADR 0001 records the delta.