@@ -1,5 +1,6 @@
 package com.lineage.api.interfaces;
 
+import java.util.Collections;
 import java.util.Map;
 
 import org.springframework.web.bind.annotation.GetMapping;
@@ -10,7 +11,7 @@ public class HealthController {
 
 	@GetMapping("/api/health")
 	public Map<String, String> health() {
-		return Map.of("status", "ok");
+		return Collections.singletonMap("status", "ok");
 	}
 
 }
